<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_movie"
            android:icon="@drawable/ic_movie_black"
            android:title="Movie"/>

    <item
            android:id="@+id/navigation_tv_show"
            android:icon="@drawable/ic_tv_black"
            android:title="@string/navBottomTvShow"/>

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="Favorite"/>


</menu>