<resources>
    <string name="app_name">JetpackProTianMvvm</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navBottomTvShow">Tv Shows</string>
</resources>
