<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="79dp"
            android:layout_height="87dp"
            android:id="@+id/progressBar"
            app:layout_constraintBottom_toBottomOf="@+id/rv_movies" app:layout_constraintEnd_toEndOf="@+id/rv_movies"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/rv_movies"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:orientation="vertical"
            android:clipToPadding="false"
            tools:scrollbars="vertical"

    >

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>